--- a/4.3-squeeze/src/src/changelog
+++ b/4.3-squeeze/src/src/changelog
@@ -1,3 +1,19 @@
+typo3-src (4.3.9+dfsg1-1+squeeze2) squeeze-security; urgency=high
+
+  * Security patch from new upstream release 4.3.14:
+    - fixes: "TYPO3 Security Bulletin TYPO3-CORE-SA-2011-003: Improper error
+      handling could lead to cache flooding in TYPO3 Core" (Closes: 641683)
+
+ -- Christian Welzel <gawain@camlann.de>  Thu, 15 Sep 2011 11:00:00 +0100
+
+typo3-src (4.3.9+dfsg1-1+squeeze1) squeeze-security; urgency=high
+
+  * Security patch from new upstream release 4.3.12:
+    - fixes: "TYPO3 Security Bulletin TYPO3-CORE-SA-2011-001: Multiple
+      vulnerabilities in TYPO3 Core" (Closes: 635937)
+
+ -- Christian Welzel <gawain@camlann.de>  Fri, 29 Jul 2011 22:00:00 +0100
+
 typo3-src (4.3.9+dfsg1-1) unstable; urgency=high
 
   * New upstream release:
